# plaintasks-zed

./: .gitignore  Cargo.toml  Makefile  README.md  example.todo  extension.toml  extension.wasm  plaintasks-zed.todo  plan.md  test-new-actions.todo  test-simple.todo
grammars/todo/: grammar.js
grammars/todo/src/: grammar.json  parser.c
languages/todo/: config.toml  highlights.scm  indents.scm  outline.scm
lsp/: Cargo.toml  main.rs
src/: extension.rs
tree-sitter-todo/: package-lock.json
