[package]
name = "plaintasks-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plaintasks-lsp"
path = "main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1"
lazy_static = "1.4"
